# GraphicsMagick

./: .hgignore  CNAME  ChangeLog  ChangeLog.2023  LICENSE  Makefile.am  Makefile.in  NEWS.txt  README.txt  configure  configure.ac  cscope.files  version.sh
.github/workflows/: ghpages.yaml  pages.yaml
Magick++/: NOTES.txt  TODO  drawing-primitives.txt
Magick++/demo/: analyze.cpp
Magick++/lib/: Image.cpp
Magick++/lib/Magick++/: Image.h  STL.h
Magick++/tests/: attributes.cpp  readWriteImages.cpp
PerlMagick/: Magick.pm  Makefile.PL  README.txt
PerlMagick/t/: read.t  write.t
PerlMagick/t/png/: read.t
TclMagick/: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac
TclMagick/generic/: Makefile.in  TclMagick.c  TclMagick.h  TclMagickAppInit.c  libttkcommon.c  libttkcommon.h
TclMagick/tests/: test-draw.tcl  test-wand.tcl
VisualMagick/configure/: configure.cpp  configure.rc  configure.vcproj  welcome_page.cpp
VisualMagick/installer/: gm-win64-Q16-dll.iss  gm-win64-Q8-dll.iss
VisualMagick/installer/inc/: body.isx  files-dlls.isx  version.isx
VisualMagick/installer/redist/VC2013/: note.txt
VisualMagick/magick/: magick_config.h.in
VisualMagick/tests/: run_constitute.bat  run_rwblob.bat  run_rwfile.bat  runtest.bat
VisualMagick/tiff/: LIBRARY.txt
VisualMagick/zlib/: LIBRARY.txt
VisualMagick/zlib/contrib/minizip/: LIBRARY.txt
coders/: Makefile.am  aai.c  avs.c  bmp.c  cineon.c  dib.c  dpx.c  fits.c  fpx.c  heif.c  hrz.c  jbig.c  jp2.c  jpeg.c  jxl.c  logo.c  mat.c  miff.c  mpc.c  msl.c  ora.c  pcd.c  pcx.c  pict.c  png.c  pnm.c  ps3.c  psd.c  svg.c  tga.c  tiff.c  topol.c  txt.c  webp.c  wmf.c  wpg.c  xtrn.c
config/: type-urw-base35-otf.mgk.in  type-urw-base35-t1.mgk.in
doc/: GraphicsMagick.imdoc  batch.imdoc  copyright.imdoc  environment.imdoc  filespec.imdoc  format.imdoc  format.tex  options.imdoc  tools.imdoc  version.imdoc
doc/Install/: README.txt  install.html  install.keep  readme.html  text2html.pl
fuzzing/: README.txt  coder_fuzzer.cc  coder_list.cc  oss-fuzz-build.sh  utils.cc
jpeg/: jconfig.h
locale/: C.mgk
magick/: GraphicsMagick.pc.in  Makefile.am  acppfile.cpp  attribute.c  blob.c  colorspace.c  command.c  delegate.c  display.c  draw.c  effect.c  enum_strings.c  export.c  gem.c  gm_messages.mc  image.c  locale_c.h  magick.c  magick_config.h.in  memory.c  pixel_cache.c  render.c  resource-private.h  resource.c  resource.h  static.c  static.h  symbols.h  utility.c  version.h
tests/: Makefile.am  bitstream.c  constitute.c  drawtest.c  rwblob.c  rwblob.tap  rwfile.c  rwfile.tap
tiff/libtiff/: stdbool2.h  tif_config.h  tif_dir.c  tif_dirread.c  tif_dirwrite.c  tif_fax3.c  tif_getimage.c  tif_hash_set.c  tif_hash_set.h  tif_lzw.c  tif_open.c  tiffconf.h
utilities/: Makefile.am  gm.1
wand/: Makefile.am  drawing_wand.c  magick_wand.c  wandtest.c
webp/src/webp/: types.h
www/: ChangeLog-2001.html  ChangeLog-2002.html  ChangeLog-2003.html  ChangeLog-2004.html  ChangeLog-2005.html  ChangeLog-2006.html  ChangeLog-2007.html  ChangeLog-2008.html  ChangeLog-2009.html  ChangeLog-2010.html  ChangeLog-2011.html  ChangeLog-2012.html  ChangeLog-2013.html  ChangeLog-2014.html  ChangeLog-2015.html  ChangeLog-2016.html  ChangeLog-2017.html  ChangeLog-2018.html  ChangeLog-2019.html  ChangeLog-2020.html  ChangeLog-2021.html  ChangeLog-2022.html  ChangeLog-2023.html  ChangeLog.html  Changelog.html  Changes.html  Changes.rst  GraphicsMagick.html  Hg.html  Hg.rst  INSTALL-unix.html  INSTALL-unix.rst  ImageMagickObject.html  ImageMagickObject.rst  Makefile.am  NEWS.html  OpenMP.html  README.html  benchmarks.html  contribute.html  (+15 more)
www/Magick++/: ChangeLog.html  Image.html  Image.rst
www/api/: blob.html  compare.html  effect.html  image.html  list.html  memory.html  operator.html  pixel_cache.html  registry.html  resource.html  types.html  types.rst
www/wand/: Makefile.am  pixel_wand.html
zlib/contrib/minizip/: unzip.c  unzip.h
